# SW_Car_dashboard-

./: CMakeLists.txt  README.md
client/desktop/: main.cpp
client/desktop/include/: canvas.h  comservice.h
client/desktop/src/: canvas.cpp  tcpservice.cpp
server/desktop/: main.cpp
server/desktop/include/: dialog.h  tcpservices.h
server/desktop/src/: dialog.cpp  tcpservices.cpp
shared/: setting.h
